[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Cutscene.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts-images/Gamaliel.otf" type="DynamicFontData" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.999978 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.607843 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[node name="Cutscene" type="Control" groups=["cutscene"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fade = SubResource( 1 )

[node name="Fade" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.141176, 0.141176, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.25
anchor_top = 0.45
anchor_right = 0.75
anchor_bottom = 0.45
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="RemoveTextTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[connection signal="timeout" from="RemoveTextTimer" to="." method="set_scene" flags=7 binds= [ 1 ]]
